@@ -21,7 +21,7 @@ my %WriteMakefileArgs = (
     "File::Temp" => 0,
     "Hash::SharedMem" => 0,
     "JSON::XS" => 0,
-    "Prometheus::Tiny" => "0.008",
+    "Prometheus::Tiny" => "0.009",
     "parent" => 0,
     "strict" => 0,
     "warnings" => 0
@@ -52,7 +52,7 @@ my %FallbackPrereqs = (
   "Hash::SharedMem" => 0,
   "JSON::XS" => 0,
   "Plack::Test" => 0,
-  "Prometheus::Tiny" => "0.008",
+  "Prometheus::Tiny" => "0.009",
   "Test::Differences" => 0,
   "Test::Exception" => 0,
   "Test::More" => 0,
