@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+- Update for Prometheus::Tiny 0.009 default_labels support
 
 0.024     2021-07-21 14:27:51+10:00 Australia/Melbourne
 - Update for Prometheus::Tiny 0.008 enum support
